[tool.poetry]
name = "paymongo"
version = "0.1.0"
description = ""
authors = ["Zorex Salvo <zorexsalvo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
dotmap = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
yapf = "^0.28.0"
faker = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
